# BackgroundSplit-OpenCV

./: CMakeLists.txt  README - 中文.md  README.md
src/GaussBGDifference/: gaussbgdifference.cpp  gaussbgdifference.h  main.cpp
src/ViBe/: Vibe.cpp  Vibe.h  main.cpp
